--- a/src/views/auth/auth-page.scss
+++ b/src/views/auth/auth-page.scss
@@ -1,4 +1,10 @@
 .auth-page {
+  &__form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
   &__logo {
     display: flex;
     align-items: center;
@@ -21,7 +27,7 @@
   }
 
   &__title {
-    font-size: 32px;
+    font-size: 33px;
     color: #010416;
     text-align: center;
     margin-bottom: 24px;
