--- a/src/layout/app-layout/app-layout.scss
+++ b/src/layout/app-layout/app-layout.scss
@@ -34,6 +34,7 @@
     flex-direction: column;
     width: 100%;
     padding: 24px;
+    padding-top: 0;
     height: calc(100% - #{$header-height});
     overflow: auto;
   }
