--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2,7 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: inherit;
+}
 
+body {
   font-family: $font-main;
   font-size: 14px;
   color: #252733;
