Добавил окна для обучения и предсказания

--- a/src/views/math-models/math-models-page.scss
+++ b/src/views/math-models/math-models-page.scss
@@ -28,8 +28,8 @@
     overflow: auto;
   }
 
-  &__table-body-cell--edit {
-    width: 64px;
+  &__table-body-cell--control {
+    width: 60px;
   }
 
   &__pagination {
